# clap-completion-example

./: .gitignore  Cargo.toml  README.md  setup
src/: main.rs
tests/: cli.rs
